--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Fiscaut Connector"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:nY0tqPDltEmPBthxvikAyp8VaOs9Vo/KoUGV2psViAA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
