--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@ APP_NAME="Fiscaut Connector"
 APP_ENV=local
 APP_KEY=base64:nY0tqPDltEmPBthxvikAyp8VaOs9Vo/KoUGV2psViAA=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE=America/Sao_Paulo
+APP_URL=http://localhost:8080
 
-APP_LOCALE=en
+APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
