--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+FISCAUT_TOKEN=https://dev.fiscaut.com.br/api/v1/
+FISCAUT_BASE_URL="1|rR6PwCzF4E0ceMEu4hcFq7fhCWGQvll7hdcVo7n579a4e18e"
